fix: sidebar on mobile devices

--- a/components/Header/styles.module.scss
+++ b/components/Header/styles.module.scss
@@ -25,10 +25,6 @@
 		&-burger {
 			margin-left: 0.5rem;
 			font-size: 2rem;
-
-			@include responsive(phone) {
-				display: none;
-			}
 		}
 
 		&-logo {
