--- a/components/Side/styles.module.scss
+++ b/components/Side/styles.module.scss
@@ -1,7 +1,7 @@
 @import "@/styles/config/mixins";
 
 .side-bar {
-	width: 100vw;
+	width: var(--side-width);
 	height: calc(100vh - var(--head-height));
 	position: fixed;
 	top: var(--head-height);
@@ -11,8 +11,21 @@
 	justify-content: flex-start;
 	align-items: center;
 	flex-direction: column;
-	width: var(--side-width);
 	border-radius: 32px;
+
+	@include responsive(phone) {
+		width: 50%;
+		transform: translateX(-100%);
+		z-index: 70;
+		background-color: var(--accent-color);
+		border-radius: 0 32px 32px 0;
+	}
+
+	&--expanded {
+		@include responsive(phone) {
+			transform: translateX(0);
+		}
+	}
 
 	&-nav {
 		width: 100%;
@@ -73,18 +86,21 @@
 			}
 		}
 
-		span {
+		&__title {
 			height: 1.5rem;
 			display: flex;
 			justify-content: center;
 			align-items: center;
+		}
 
-			&:first-child {
-				width: 1.5rem;
-				height: 1.5rem;
-				margin: 0.25rem 0.5rem;
-				font-size: 1.25rem;
-			}
+		span:first-child {
+			width: 1.5rem;
+			height: 1.5rem;
+			margin: 0.25rem 0.5rem;
+			font-size: 1.25rem;
+			display: inline-flex;
+			justify-content: center;
+			align-items: center;
 		}
 	}
 
@@ -102,5 +118,21 @@
 
 	&--collapsed &-link__title {
 		display: none;
+	}
+
+	&-overlay {
+		position: fixed;
+		z-index: 69;
+		top: var(--head-height);
+		left: 0;
+		width: 100vw;
+		height: calc(100vh - var(--head-height));
+		display: none;
+	}
+
+	&--expanded + &-overlay {
+		@include responsive(phone) {
+			display: block;
+		}
 	}
 }
