--- a/styles/config/_theme.scss
+++ b/styles/config/_theme.scss
@@ -10,10 +10,6 @@
 	--side-width-collapsed: 5.5rem;
 	--side-width-expanded: 22%;
 
-	@include responsive(phone) {
-		--side-width-expanded: 5.5rem;
-	}
-
 	--font-poppins: Poppins, system-ui, -apple-system, BlinkMacSystemFont,
 		"Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 	--font-montserrat: "Montserrat", system-ui, -apple-system,
